@@ -549,6 +549,13 @@ multiplication table) are done only once. The components of the result
 are in most cases \typ{COL}s but are allowed to be \typ{INT}s or \typ{FRAC}s.
 Shallow function.
 
+\fun{GEN}{nfC_multable_mul}{GEN nf, GEN v, GEN mx} same as \tet{nfC_nf_mul},
+where the argument $x$ is replaced by its multiplication table \kbd{mx}.
+
+\fun{GEN}{zkC_multable_mul}{GEN nf, GEN v, GEN x} same as \tet{nfC_nf_mul},
+where $v$ is a vector of algebraic integers, $x$ is an algebraic
+integer, and $x$ is replaced by \kbd{zk\_multable}$(x)$.
+
 \fun{GEN}{zk_multable}{GEN nf, GEN x} given a \kbd{ZC} $x$ (implicitly
 representing an algebraic integer), returns the \kbd{ZM} giving the
 multiplication table by $x$. Shallow function (the first column of the result
@@ -558,6 +565,14 @@ points to the same data as $x$).
 representing an algebraic integer), returns the \kbd{QC} giving the
 inverse $x^{-1}$. Return \kbd{NULL} if $x$ is $0$.
 Not memory clean but safe for \kbd{gerepileupto}.
+
+\fun{GEN}{zkmultable_inv}{GEN mx} as \tet{zk_inv}, where
+the argument given is \kbd{zk\_multable}$(x)$.
+
+\fun{GEN}{zkmultable_capZ}{GEN mx} given a non-zero \var{zkmultable}
+\var{mx} attached to $x \in \Z_K$, return the positive generator of
+$(x)\cap \Z$.
+
 
 \fun{GEN}{zk_scalar_or_multable}{GEN nf, GEN x} given a \typ{INT} or \kbd{ZC}
 $x$, returns a \typ{INT} equal to $x$ if the latter is a scalar
