@@ -16,7 +16,8 @@ Done for version 2.8.1 (released ??/??/2016):
     7- [libpari] get_arith_Z, get_arith_ZZM
     8- [libpari] Mod2, Mod4, Mod8, Mod16, Mod32, Mod64, umodi2n
     9- [libpari] logint, logintall
-   10- [libpari] zk_inv
+   10- [libpari] zk_inv, zkmultable_capZ, zkmultable_inv, nfC_multable_mul,
+       zkC_multable_mul
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
